<resources>
    <string name="app_name">needit</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">"Sign in "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">986109554810055</string>

    <string name="title_activity_main">Need IT</string>
    <string name="availableIndicationString">Available </string>
    <string name="helpBtnString">HELP!</string>
    <string name="needItLogoContent">needit</string>

    <string name="title_activity_splash">Need IT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cockroachHelp">Get help with cockroach</string>
    <string name="glassSugar">Need glass of sugar</string>
    <string name="carCables">Get help with car cables</string>
    <string name="moving">Need help in moving</string>
    <string name="navigation">Need help with nevigation</string>
    <string name="sugar">Need glass sugar</string>
    <string name="help_sources_title">What do you need?</string>
</resources>
