<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mydomain.needit.HelpSourcesActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/cockroachBtn"
                android:background="@mipmap/ic_cockroach"
                android:soundEffectsEnabled="true"
                android:contentDescription="@string/cockroachHelp"
                android:onClick="onHelpButtonPress"
                android:clickable="true"
                android:padding="20dp" />

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/carServiceBtn"
                android:contentDescription="@string/carCables"
                android:background="@mipmap/ic_car_service"
                android:onClick="onHelpButtonPress"
                android:clickable="true"
                android:padding="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/classSugarBtn"
                android:isScrollContainer="true"
                android:background="@mipmap/ic_food"
                android:onClick="onHelpButtonPress"
                android:padding="20dp"
                android:contentDescription="@string/sugar" />

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/childrenBtn"
                android:contentDescription="@string/glassSugar"
                android:onClick="onHelpButtonPress"
                android:clickable="true"
                android:padding="20dp"
                android:background="@mipmap/ic_children"
                android:hapticFeedbackEnabled="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/moveBtn"
                android:padding="20dp"
                android:onClick="onHelpButtonPress"
                android:background="@mipmap/ic_moving"
                android:contentDescription="@string/moving" />

            <ImageButton
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/navBtn"
                android:padding="20dp"
                android:onClick="onHelpButtonPress"
                android:background="@mipmap/ic_nav"
                android:contentDescription="@string/navigation" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
